--- a/Exercise3/css/style.css
+++ b/Exercise3/css/style.css
@@ -13,7 +13,7 @@
     src: url(/fonts/Roboto-Regular.ttf);
     
 }
-
+                                                    /* διαφορα font που θα χρησιμοποιηθουν σε ολες τις σελιδες */
 
 @font-face{
 
@@ -175,7 +175,7 @@ body {
 
 #slim {
 
-    padding-left: 40px;
+    padding-left: 40px;                  /* μια απο τις εικονες ειναι πιο μικρη αποτι πρεπει και ετσι κανουμε το τετραγωνο της ισο με των αλλων εικωνων */
     padding-right: 40px;
 }
 
@@ -509,7 +509,7 @@ a:active {
 }
 
 .outer-box {    
-    margin-top: -15px;
+    margin-top: -15px;           /* ωστε να κατεβει και να αρχιζει στο ιδιο υψος το κουτι χαρακτηριστικων με το κουτι της εικονας του κινητου */
 }
 
 .manifacturer {
@@ -636,7 +636,7 @@ label {
 @keyframes outline-checked {
     0% {
         outline-offset: 0;
-    }
+    }                               /* ολο αυτο ειναι animation για τα radio buttons οταν τα πατας */
 
     100% {
         outline-offset: -0.2rem;
@@ -920,7 +920,7 @@ select {
 .footer-content>a>img {
     filter: grayscale(100%);
     border-radius: 25px;
-}
+}                                        /* ασπρομαυρες φωτο μεχρι να κανουμε hover και να φυγει το greyscale εφε */
 
 .footer-content>a>img:hover {
     filter: grayscale(0%);
