--- a/Exercise5/css/style.css
+++ b/Exercise5/css/style.css
@@ -23,13 +23,13 @@
     grid-template-rows: 0.2fr 2fr 0.2fr;
     width: 100vw;
     height: 100vh;
-    /*  */
+    
 }
 
 .header-item {
     grid-column: 1/4;
     grid-row: 1/2;
-    /*  */
+    
 }
 
 .main-item {
@@ -1014,6 +1014,18 @@ select {
 }
 
 
+@media only screen and (max-width: 1058px) {
+    
+
+    .navigation  a{
+
+        font-size: 16px;                /* μικροτερο font για να χωραει το menu bar */
+    }
+
+}
+
+
+
 
 @media only screen and (max-width: 1024px) {
     .analytika-xarakthristika {
@@ -1027,6 +1039,26 @@ select {
         font-size: 1.5vw;
     }
 }
+
+
+
+
+@media only screen and (max-width: 965px) {
+    
+
+    .navigation {
+
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;                     /* αλλαγη του format του nav menu */
+        
+    }
+
+    
+
+}
+
+
 
 @media only screen and (max-width: 900px) {
     .subcategory {
