--- a/Exercise4/css/style.css
+++ b/Exercise4/css/style.css
@@ -1029,6 +1029,19 @@ select {
     }
 }
 
+
+@media only screen and (max-width: 1058px) {
+    
+
+    .navigation  a{
+
+        font-size: 16px;                /* μικροτερο font για να χωραει το menu bar */
+    }
+
+}
+
+
+
 @media only screen and (max-width: 1024px) {
 
 
@@ -1046,6 +1059,23 @@ select {
         font-size: 1.5vw;           /* απο τα 1000px και μετα θα πηγαινει το font αναλογα με το μεγεθος του viewport width */
     }
 }
+
+
+@media only screen and (max-width: 965px) {
+    
+
+    .navigation {
+
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;                     /* αλλαγη του format του nav menu */
+        
+    }
+
+    
+
+}
+
 
 
 @media only screen and (max-width: 900px){
